[FIX] l10n_din5008: size of the footer
General scaling of the footer font is too big. Normal Sized company names cannot
be displayed. In Fact, the Iban numbers etc. are cut off at the bottom.
This commit will reduce the size of the footer.

task-3192117

--- a/addons/l10n_din5008/static/src/scss/report_din5008.scss
+++ b/addons/l10n_din5008/static/src/scss/report_din5008.scss
@@ -98,6 +98,7 @@
         .company_details {
             margin-top: 4.23mm;
             width: 100%;
+            font-size: 0.8em;
             table {
                 border-top: solid 1px;
                 table-layout: fixed;
